[project]
name = "keinbudget"
version = "0.1.0"
description = "expense manager."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.4",
    "pyotp>=2.9.0",
    "python-jose>=3.4.0",
    "tortoise-orm>=0.25.0",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
    "fastapi-autocrud @ git+https://github.com/cheetahbyte/fastapi-autocrud@main"
]

[dependency-groups]
dev = [
    "argon2-cffi>=23.1.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.8",
]
